--- a/style.css
+++ b/style.css
@@ -107,10 +107,24 @@ body{
 	margin-top: 10px;
 	font-size: 20px;
 }
-#img{
+#img-1{
 	width: 100%;
 	height: 400px;
-	background-image: url("bg.jpg");
+	background-image: url("img-1.jpg");
+	background-attachment: fixed;
+	margin-top: 100px;
+}
+#img-2{
+	width: 100%;
+	height: 400px;
+	background-image: url("img-2.jpg");
+	background-attachment: fixed;
+	margin-top: 100px;
+}
+#img-3{
+	width: 100%;
+	height: 400px;
+	background-image: url("img-3.jpg");
 	background-attachment: fixed;
 	margin-top: 100px;
 }
