--- a/style.css
+++ b/style.css
@@ -43,11 +43,10 @@ body{
 	position: relative;
 }
 #menu{
-	float: right;
 	margin-top: -80px;
-	margin-right: 40px;
-	z-index: 3;
-	position: relative;
+	margin-left: 20px;
+	z-index: 6;
+	position: fixed;
 	background-color: #000;
 	padding: 5px;
 	padding-top: 100px;
@@ -160,4 +159,22 @@ body{
 	float: right;
 	margin-right: 10px;
 	margin-top: -1740px;
+}
+#emojis{
+	width: 95vw;
+	margin: 350px auto;
+}
+#emojis h1{
+	font-size: 80px;
+	font-weight: 700;
+	margin-top: 100px;
+	color: #323455;
+}
+#emojis-h2{
+	margin-top: 200px;
+	width: 350px;
+	font-weight: 300;
+	font-size: 28px;
+	font-style: italic;
+	color: #323455;
 }
